# risk_and_yield

./: .gitignore  LICENCE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  tox.ini
AgroModel2025/: agua_obs_soja_2021.mat  cargar_coordenadas_maiz2020.m  cargar_coordenadas_maiz2021.m  cargar_coordenadas_soja2020.m  fechas_agua_soja_2021__no_se_usan_para_simular_solo_para_checkear.mat  fechasiembra_2020-2021.xlsx  fechasiembra_2021-2022.xlsx  mat_aguadisp_saocom_maiz_2021-2022.mat  mat_aguadisp_saocom_soja_2021-2022_2.mat  mat_soja_2021_lat_lowres.mat  mat_soja_2021_lon_lowres.mat  parametros_soja.m  unificar_climas_v2.m
AgroModel2025/Meteorology/: script_clima_historico.m  script_clima_historico_2.m
Model Rinde y Riesgo de Cultivos/: fechas_agua_m.mat  mat_dds_maiz_est_lowres.mat
Model Rinde y Riesgo de Cultivos/Meteorology/: 20220424_salidaPronosticoClimatico.csv  ClimaPAR.csv  salidaPronoticoClimatico_2.csv  script_clima_futuro_1.m  script_clima_futuro_nuevo1.m
Model Rinde y Riesgo de Cultivos/Meteorology/old/: ArroyitoDatos2022_2.txt  ArroyitoDatosEstAuto2.txt  ArroyitoDatosEstAuto4.csv  temperatures.csv
doc/Model Rinde y Riesgo de Cultivos/: clima_y_fechas_2.m  mat_maiz_2021_lowres.mat  unificar_climas_v2.m
doc/Model Rinde y Riesgo de Cultivos/Meteorology/: 2022050900_salidaPronosticoClimatico.csv  ArroyitoDatos2022.csv  ArroyitoDatos2022.txt  EstacionObservado_20220312_20220807.xlsx  clima_futuro.csv  clima_total.csv  datosRadiacionyMas.xlsx  script_ET0.m  script_clima_futuro_nuevo2.m  script_clima_historico.m  script_radiacion_2.m
doc/legacy/: Copy of Inputs Modelo Prediccion Riesgo Agro.docx  Copy of _Simulation of Crop Yield.docx  agromodel_model_plantgrowth_v26.m  calcularDPV.m  cargar_coordenadas_maiz2021.m  dds_datos_estimacion.mat  mat_maiz_2021_lon_lowres.mat  parametros_maiz.m  unificar_climas_v2.m  var_historicas.m
doc/legacy/AgroModel2025/: agua_obs_maiz_2021.mat  cargar_coordenadas_soja2021.m  mat_aguadisp_saocom_soja_2020-2021.mat  mat_aguadisp_saocom_soja_2021-2022.mat
doc/legacy/Meteorology/: Datos de ET0 from Manfredi.xlsx  PAR 301121 al 170122.xlsx  cargar_rad_hist.m  clima octubre y noviembre 2021.csv  datosObservados20220117_20220311.xlsx  graficos.m  lluvias.xlsx  salidaPronoticoClimatico.csv  script_clima_futuro.m  script_clima_futuro_2.m  script_clima_historico_rad2020.m  script_radiacion.m  script_radiacion_3.m
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  risknyield.core.crops.rst  risknyield.core.data_containers.rst  risknyield.core.model.rst  risknyield.core.rst  risknyield.library.hydrology.rst  risknyield.library.io_hdf5.rst  risknyield.library.rst  risknyield.rst
examples/: run_simulation.py
legacy/MATLAB legacy/AgroModel2025/: agromodel_model_plantgrowth_v27.m  datos_maiz.csv  mat_aguadisp_saocom_maiz_2020-2021.mat  mat_aguadisp_saocom_maiz_2021-2022_2.mat  mat_dds_soja_est_lowres.mat  readme.txt
legacy_tests/: test_legacy_output.ipynb
projects/: input_weather.ipynb  output_legacy.ipynb  output_sim.ipynb  project_utils.py  test_legacy_output.ipynb
projects/notebooks/: map.txt  output_legacy.ipynb  output_sim.ipynb
risknyield/: __init__.py
risknyield/core/: crops.py  data_containers.py  main.py  model.py
src/: load_soil.py  load_wheather.py  main.py  run_simulation.py  simulation.ipynb
src/data/Soil/: mat_maiz_2021_lat_lowres.mat
src/notebooks/: agro_model.ipynb  weather_from_agro.ipynb  wheather.ipynb  wheather_from_idiot.ipynb
tests/: test_legacy_output.ipynb  test_regression_biomass.py  test_regression_full.py
(+25 files in other folders)
